deploy: bc342684cfd35b62a8e32f064c526b86a9e51401

--- a/Installation/guides/package.html
+++ b/Installation/guides/package.html
@@ -223,8 +223,8 @@ $ makepkg -si
   pkgs.vinegar
 ];
 </code></pre>
-<p>Or just for your user using <a href="https://search.nixos.org/options?show=home.programs"><code>home.programs</code></a>:</p>
-<pre><code class="language-nix">home.programs = [
+<p>Or just for your user using <a href="https://nix-community.github.io/home-manager/options.xhtml#opt-home.packages"><code>home.packages</code></a> via <a href="https://nixos.wiki/wiki/Home_Manager">Home Manager</a>:</p>
+<pre><code class="language-nix">home.packages = [
   pkgs.vinegar
 ];
 </code></pre>
