--- a/Troubleshooting/winehq.html
+++ b/Troubleshooting/winehq.html
@@ -179,7 +179,7 @@
 <p><strong>Warning</strong>: This guide is only recommended for advanced users. If facing issues, please follow <a href="./index.html">Troubleshooting</a> instructions first.</p>
 <p>Vinegar can be configured to help you determine whether a bug/issue is caused by Wine, so you can submit a report to WineHQ without violating their guidelines.</p>
 <p>To begin, create a new toml configuration file in an appropriate location, with the following content:</p>
-<pre><code class="language-toml"># Written for Vinegar v1.5.8.
+<pre><code class="language-toml"># Written for Vinegar v1.5.9.
 
 # WARNING: This should be left empty if your system has WineHQ packages installed (https://wiki.winehq.org/Download).
 # Otherwise, either install WineHQ packages or set wineroot to a staging/development wine's path.
@@ -218,6 +218,13 @@ auto_kill_prefix = false      # (X)
 launcher = &quot;&quot;                 # (X)
 gpu = &quot;&quot;                      # (X)
 discord_rpc = false           # (X)
+gamemode = false              # (X)
+
+[player.env]
+OBS_VKCAPTURE = &quot;&quot;            # (X)
+
+[player.fflags]
+DFIntTaskSchedulerTargetFps = 60 # (X)
 
 [studio]
 channel = &quot;&quot;                  # (?): Use this to debug a specific Roblox version.
@@ -228,9 +235,8 @@ auto_kill_prefix = false      # (X)
 launcher = &quot;&quot;                 # (X)
 gpu = &quot;&quot;                      # (X)
 discord_rpc = false           # (X)
+gamemode = false              # (X)
 
-[player.fflags]
-DFIntTaskSchedulerTargetFps = 60 # (X)
 </code></pre>
 <p>Read over every option carefully and follow the instructions in the comments.</p>
 <p><strong>Critical</strong>: This configuration file depends heavily on your Vinegar version! <u>Do <strong>NOT</strong> reuse it</u>, especially after updating Vinegar. Recheck this guide to ensure you have the latest version of the configuration.</p>
