--- a/Troubleshooting/winehq.html
+++ b/Troubleshooting/winehq.html
@@ -179,7 +179,7 @@
 <p><strong>Warning</strong>: This guide is only recommended for advanced users. If facing issues, please follow <a href="./index.html">Troubleshooting</a> instructions first.</p>
 <p>Vinegar can be configured to help you determine whether a bug/issue is caused by Wine, so you can submit a report to WineHQ without violating their guidelines.</p>
 <p>To begin, create a new toml configuration file in an appropriate location, with the following content:</p>
-<pre><code class="language-toml"># Written for Vinegar v1.5.9.
+<pre><code class="language-toml"># Written for Vinegar v1.6.0.
 
 # WARNING: This should be left empty if your system has WineHQ packages installed (https://wiki.winehq.org/Download).
 # Otherwise, either install WineHQ packages or set wineroot to a staging/development wine's path.
@@ -198,7 +198,7 @@ sanitize_env = false             # (X)
 [splash]
 enabled = false                  # (X)
 
-[global.env]
+[env]
 WINEDEBUG = &quot;&quot;                   # (?): Use this to increase Wine log verbosity.
 MESA_GL_VERSION_OVERRIDE = &quot;&quot;    # (?): OpenGL debugging
 __GL_THREADED_OPTIMIZATIONS = &quot;&quot; # (?): OpenGL debugging
