--- a/Configuration/index.html
+++ b/Configuration/index.html
@@ -235,13 +235,21 @@ when using DXVK, ensure that the renderer is <code>&quot;D3D11&quot;</code>, oth
 <p>On non-PRIME systems, <code>&quot;prime-discrete&quot;</code> and <code>&quot;integrated&quot;</code> have the same effect as <code>&quot;&quot;</code>.</p>
 <h3 id="splash-configuration"><a class="header" href="#splash-configuration">Splash Configuration</a></h3>
 <div class="table-wrapper"><table><thead><tr><th>Option</th><th>Description</th><th>Default</th></tr></thead><tbody>
-<tr><td><code>enabled</code></td><td>Deterimes if the splash window appears or not</td><td><code>true</code></td></tr>
-<tr><td><code>background</code></td><td>background of the splash window</td><td><code>0x242424</code></td></tr>
-<tr><td><code>foreground</code></td><td>foreground of the text in the splash</td><td><code>0xfafafa</code></td></tr>
-<tr><td><code>Red</code></td><td>background color of the 'Cancel' button</td><td><code>0xcc241d</code></td></tr>
-<tr><td><code>Gray1</code></td><td>background color of the progress bar</td><td><code>0x303030</code></td></tr>
-<tr><td><code>Gray2</code></td><td>foreground color of the description</td><td><code>0x777777</code></td></tr>
-<tr><td><code>Accent</code></td><td>color of the 'Show Log' and progress bar</td><td><code>0x8fbc5e</code></td></tr>
+<tr><td><code>enabled</code></td><td>show the splash window when opening Roblox.</td><td><code>true</code></td></tr>
+<tr><td><code>logo_path</code></td><td>logo file path used to load and render the logo.</td><td>N/A</td></tr>
+<tr><td><code>style</code></td><td>style for the splash window's layout.</td><td><code>&quot;compact&quot;</code></td></tr>
+<tr><td><code>background</code></td><td>background color for the splash window.</td><td><code>0x242424</code></td></tr>
+<tr><td><code>foreground</code></td><td>font color for text on the splash window.</td><td><code>0xfafafa</code></td></tr>
+<tr><td><code>cancel</code></td><td>accent color for 'Cancel' buttons.</td><td><code>0xbc3c3c</code></td></tr>
+<tr><td><code>accent</code></td><td>accent color for progress bars and action/confirmation buttons.</td><td><code>0x8fbc5e</code></td></tr>
+<tr><td><code>track</code></td><td>background color for progress bars.</td><td><code>0x303030</code></td></tr>
+<tr><td><code>info</code></td><td>background color for text containing binary information.</td><td><code>0x777777</code></td></tr>
+</tbody></table>
+</div>
+<p>The  following styles are available:</p>
+<div class="table-wrapper"><table><thead><tr><th>Style</th><th>Look</th></tr></thead><tbody>
+<tr><td><code>&quot;compact&quot;</code></td><td><img src="./splash-compact.png" alt="" /></td></tr>
+<tr><td><code>&quot;familiar&quot;</code></td><td><img src="./splash-familiar.png" alt="" /></td></tr>
 </tbody></table>
 </div>
 <p>The colors are in hexadecimal format, stored as numbers internally such as <code>0xff00ff</code>.</p>
