deploy: 237a02fcdc961c5c8d03325fb5bbdf335e817ec4

--- a/Troubleshooting/index.html
+++ b/Troubleshooting/index.html
@@ -254,6 +254,7 @@ Some users have reported that creating a <a href="https://github.com/umlaeute/v4
 <p>WebView2 is currently not supported, so there's no way to log in directly inside of studio.</p>
 <p>Follow the on-screen prompt and click &quot;Log in via browser&quot;. This will open an authentication website in your browser. Once you're done authenticating, you might be prompted to allow the use of the <code>roblox-studio-auth</code> protocol. Make sure to say &quot;yes&quot;.</p>
 <p>If all steps were followed correctly, studio should automatically log into your account.</p>
+<p>If you're still unable to log in, try changing your DNS to a viable alternative such as <code>1.1.1.1</code> or <code>8.8.8.8</code>. Studio authentication is known to be broken with certain DNS providers. </p>
 <h3 id="your-gpu-is-incompatible-error"><a class="header" href="#your-gpu-is-incompatible-error">&quot;Your GPU is incompatible&quot; error</a></h3>
 <p>This issue is most commonly caused by the Wine build not having the Vulkan ChildWindow patch applied. There are a couple solutions:</p>
 <ul>
