deploy: ea6425a945895c68590f5b4d5aa928b6d5b19378

--- a/Configuration/index.html
+++ b/Configuration/index.html
@@ -204,7 +204,7 @@
 <h3 id="binary-configuration"><a class="header" href="#binary-configuration">Binary Configuration</a></h3>
 <p>This section are the available options for the Studio and Player configurations, they are specified under their sections as listed above.</p>
 <div class="table-wrapper"><table><thead><tr><th>Option</th><th>Description</th><th>Default</th></tr></thead><tbody>
-<tr><td><code>channel</code></td><td>the Roblox release channel</td><td><code>&quot;live&quot;</code></td></tr>
+<tr><td><code>channel</code></td><td>the deployment channel to be used; <strong>DO NOT CHANGE, ONLY KEPT FOR DEVELOPERS</strong></td><td><code>&quot;live&quot;</code></td></tr>
 <tr><td><code>launcher</code></td><td>the program that is used to launch Wine when launching Roblox; this can be set to <code>gamemoderun</code>.</td><td>none</td></tr>
 <tr><td><code>renderer</code></td><td>selects the rendering engine to be used by Roblox via FFlags.</td><td><code>&quot;D3D11&quot;</code></td></tr>
 <tr><td><code>discord_rpc</code></td><td>use Discord's rich presence alongside handling the BloxstrapRPC protocol.</td><td>Player: <code>true</code></td></tr>
