--- a/Configuration/index.html
+++ b/Configuration/index.html
@@ -189,7 +189,7 @@
 <div class="table-wrapper"><table><thead><tr><th>Name</th><th>Description</th><th>Default</th></tr></thead><tbody>
 <tr><td><code>wineroot</code></td><td>the path to a valid Wine 'root' installation directory.</td><td>none</td></tr>
 <tr><td><code>dxvk_version</code></td><td>the DXVK version to be used; this can be set to legacy DXVK for old GPUs that don't support modern Vulkan.</td><td><code>&quot;2.3&quot;</code></td></tr>
-<tr><td><code>multiple_instances</code></td><td>allow for multiple instances of Roblox to be running simultaneously; see notes about ESYNC</td><td><code>false</code></td></tr>
+<tr><td><code>multiple_instances</code></td><td>allow for multiple instances of Roblox to be running simultaneously; requires setting <code>WINEESYNC</code> to <code>&quot;0&quot;</code>.</td><td><code>false</code></td></tr>
 <tr><td><code>sanitize_env</code></td><td>sanitize the global environment, hand-picked variables are allowed through.</td><td><code>false</code></td></tr>
 </tbody></table>
 </div>
@@ -204,7 +204,7 @@
 <h3 id="binary-configuration"><a class="header" href="#binary-configuration">Binary Configuration</a></h3>
 <p>This section are the available options for the Studio and Player configurations, they are specified under their sections as listed above.</p>
 <div class="table-wrapper"><table><thead><tr><th>Option</th><th>Description</th><th>Default</th></tr></thead><tbody>
-<tr><td><code>channel</code></td><td>the deployment channel to be used; <strong>DO NOT CHANGE, ONLY KEPT FOR DEVELOPERS</strong></td><td><code>&quot;live&quot;</code></td></tr>
+<tr><td><code>channel</code></td><td>the deployment channel to be used; <strong>DO NOT CHANGE, ONLY KEPT FOR DEVELOPERS</strong></td><td><code>&quot;LIVE&quot;</code></td></tr>
 <tr><td><code>launcher</code></td><td>the program that is used to launch Wine when launching Roblox; this can be set to <code>gamemoderun</code>.</td><td>none</td></tr>
 <tr><td><code>renderer</code></td><td>selects the rendering engine to be used by Roblox via FFlags.</td><td><code>&quot;D3D11&quot;</code></td></tr>
 <tr><td><code>discord_rpc</code></td><td>use Discord's rich presence alongside handling the BloxstrapRPC protocol.</td><td>Player: <code>true</code></td></tr>
