--- a/Installation/guides/source.html
+++ b/Installation/guides/source.html
@@ -187,7 +187,7 @@
 <p>It is recommended to ensure that you have installed Wine 8.3 or above on your system, as Roblox requires a minimum version of 8.0 and may encounter stability issues under 8.3.</p>
 <h2 id="building-vinegar"><a class="header" href="#building-vinegar">Building Vinegar</a></h2>
 <p>To build Vinegar from source, you will need to install Go; it can be found packaged as <code>golang</code> or <code>go</code> on some Linux distributions.</p>
-<p>Aditionally will need to install the dependencies needed by Gio. The documentation can be found <a href="https://gioui.org/doc/install/linux">here</a>, However you are able to disable the splash window (which uses Gio) by appending the <code>nosplash</code> build tag to the build parameters (<code>VINEGAR_GOFLAGS=--tags=nosplash</code>).</p>
+<p>Aditionally will need to install the dependencies needed by Gio. The documentation can be found <a href="https://gioui.org/doc/install/linux">here</a>.</p>
 <p>Clone Vinegar's git repository and build Vinegar:</p>
 <pre><code class="language-console">$ git clone https://github.com/vinegarhq/vinegar
 $ cd vinegar
