deploy: 8f7e36624b88c59daa660ecaf574ddbc4f7b7410

--- a/Configuration/index.html
+++ b/Configuration/index.html
@@ -198,7 +198,7 @@
 <tr><td><code>[player]</code></td><td>Binary configuration for Player</td></tr>
 <tr><td><code>[studio]</code></td><td>Binary configuration for Studio</td></tr>
 <tr><td><code>[env]</code></td><td>Global environment</td></tr>
-<tr><td><code>[splash]</code></td><td>Configuraton for the loading screen of Vinegar</td></tr>
+<tr><td><code>[splash]</code></td><td>Configuration for the loading screen of Vinegar</td></tr>
 </tbody></table>
 </div>
 <h3 id="binary-configuration"><a class="header" href="#binary-configuration">Binary Configuration</a></h3>
