--- a/Troubleshooting/index.html
+++ b/Troubleshooting/index.html
@@ -197,16 +197,23 @@ Run <code>echo kernel.split_lock_mitigate=0 | sudo tee /etc/sysctl.d/99-splitloc
 <p>On XWayland, the cursor cannot be locked unless it's invisible. This impacts the functionality of Roblox's first-person and shiftlock modes. This also impacts Studio's edit mode, where the camera rotation depends on the cursor being locked and is broken.</p>
 <p>Switching to a real X11 session fixes this issue. Some users have also reported success with gamescope's <code>--force-grab-cursor</code> option, but this doesn't seem to work for everyone.</p>
 <p>Once Wine's wayland driver is introduced (scheduled for next year), this issue should be fixed.</p>
+<h3 id="dxvk-returns-white-screen"><a class="header" href="#dxvk-returns-white-screen">DXVK returns white screen</a></h3>
+<p>As of 16/02/24 Roblox released an update that broke DXVK,
+a temporary solution is to disable DXVK and use Vulkan instead.</p>
 <h3 id="white-screen"><a class="header" href="#white-screen">White Screen</a></h3>
 <p>Usually, this is a sign of missing graphics libraries which Wine depends on to work. Check <a href="https://github.com/lutris/docs/blob/master/InstallingDrivers.md">Lutris Docs: Installing Drivers</a> out for instructions on how to install them.</p>
 <p>This may also indicate that your GPU doesn't meet the minimum Vulkan requirements; Use the OpenGL renderer, or set the installed DXVK version to one which includes a legacy version of Vulkan supported by your GPU.</p>
 <h3 id="stale-wineserver"><a class="header" href="#stale-wineserver">Stale wineserver</a></h3>
 <p>Although this normally doesn't happen, the wineserver might continue running in certain cases. Using the <code>vinegar kill</code> command should stop it.</p>
+<h3 id="roblox-fails-to-install"><a class="header" href="#roblox-fails-to-install">Roblox fails to install</a></h3>
+<p>To fix this issue just relaunch Vinegar, if the problem persists it could be an internet connection related issue.</p>
 <h3 id="no-roblox-desktop-entriesshortcuts"><a class="header" href="#no-roblox-desktop-entriesshortcuts">No Roblox desktop entries/shortcuts</a></h3>
 <p>This issue has no known cause, but appears to be more frequent with the Vinegar Flatpak. Rebooting your system should fix it.</p>
 <h3 id="roblox-doesnt-launch-from-the-website"><a class="header" href="#roblox-doesnt-launch-from-the-website">Roblox doesn't launch from the website</a></h3>
 <p>This issue is most likely caused by Vinegar failing to configure the mimelist entries. This can be fixed by manually adding them.
 First, remove any Roblox related lines in <code>~/.config/mimeapps.list</code>, then, under the <code>[Default Applications]</code> section add the lines found at the end of <a href="https://vinegarhq.org/Installation/guides/source.html#installing-vinegar">this</a> chapter.</p>
+<h3 id="roblox-doesnt-launch-from-website-if-using-firefoxlibrewolf"><a class="header" href="#roblox-doesnt-launch-from-website-if-using-firefoxlibrewolf">Roblox doesn't launch from website if using Firefox/Librewolf</a></h3>
+<p>In about:config set <code>network.http.referer.XOriginPolicy</code> to <code>1</code> and <code>network.http.sendRefererHeader</code> to <code>2</code></p>
 <h3 id="vinegar-doesnt-launch-if-using-an-nvidia-gpu-with-wayland"><a class="header" href="#vinegar-doesnt-launch-if-using-an-nvidia-gpu-with-wayland">Vinegar doesn't launch if using an Nvidia GPU with Wayland</a></h3>
 <p>This issue can be fixed by switching to X11 or by disabling the Vinegar splash, instructions on how to do so can be found <a href="https://vinegarhq.org/Configuration/index.html#splash-configuration">here</a></p>
 <h3 id="stuttering-and-freezing-nvidia-gpu"><a class="header" href="#stuttering-and-freezing-nvidia-gpu">Stuttering and freezing (Nvidia GPU)</a></h3>
@@ -228,6 +235,10 @@ If none of the workarounds above work or apply, consider using Roblox windowed i
 This may also be your GPU not supporting Vulkan or not supporting modern Vulkan; Use the OpenGL renderer, or set the installed DXVK version to one which includes a legacy version of Vulkan that your GPU supports.</p>
 </li>
 </ul>
+<h3 id="ui-elements-look-small"><a class="header" href="#ui-elements-look-small">UI elements look small</a></h3>
+<p>Adjust the DPI settings found in the winecfg GUI, to open it run <code>flatpak run org.vinegarhq.Vinegar player exec winecfg</code> or <code>vinegar player exec winecfg</code>, go to the <code>graphics</code> section to find the DPI settings.</p>
+<h3 id="camera-moves-with-a-delay"><a class="header" href="#camera-moves-with-a-delay">Camera moves with a delay</a></h3>
+<p>Lower your mouse polling rate to 125hz.</p>
 <hr />
 <h2 id="player-issues"><a class="header" href="#player-issues">Player Issues</a></h2>
 <p>Known Roblox Player issues:</p>
