--- a/Troubleshooting/index.html
+++ b/Troubleshooting/index.html
@@ -176,7 +176,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="troubleshooting"><a class="header" href="#troubleshooting">Troubleshooting</a></h1>
-<p>If there are any issues here that are undocumented, feel free to <a href="https://github.com/vinegarhq/vinegarhq.github.io/issues/new/choose">create an issue!</a></p>
+<p>If there are any undocumented issues, feel free to <a href="https://github.com/vinegarhq/vinegarhq.github.io/issues/new/choose">create an issue</a> to update the documentation!</p>
 <hr />
 <h2 id="checking-avx-compatibility"><a class="header" href="#checking-avx-compatibility">Checking AVX Compatibility</a></h2>
 <p>There are 2 ways to check if your CPU supports AVX:</p>
