--- a/Configuration/tips-and-tricks/index.html
+++ b/Configuration/tips-and-tricks/index.html
@@ -177,18 +177,21 @@
                     <main>
                         <h1 id="tips-and-tricks"><a class="header" href="#tips-and-tricks">Tips and tricks</a></h1>
 <h2 id="overlay"><a class="header" href="#overlay">Overlay</a></h2>
-<p>In Vinegar, a directory called <code>overlay</code> will be copied directly to the Roblox Player and Studio upon launching; this can be used to override files of Roblox, allowing for modifications!</p>
+<p>In Vinegar, a directory called <code>overlay</code> will be copied directly to the Roblox Player or Studio - depending on which directory the mod was placed in, upon launching; this can be used to override files of Roblox, allowing for modifications!</p>
 <p>The <code>overlay</code> folder is not created by default, and it is located always along with the configuration file, which is depending on your install method:</p>
 <ul>
 <li>On Flatpak, it's located in <code>~/.var/app/org.vinegarhq.Vinegar/config/vinegar/overlay</code></li>
 <li>On other methods, it's located in <code>~/.config/vinegar/overlay</code></li>
 </ul>
-<p>Vinegar requires no extra configuration for the folder to work.</p>
+<p>Vinegar requires either a <code>player</code> or a <code>studio</code> directory to be placed in the overlay directory, each one resulting in the modification being copied appropiately. Changes are irreversible and reverting means removing the deployment (<code>vinegar uninstall</code>)</p>
 <p>Example replacement of Roblox's default death sound:</p>
-<pre><code>── overlay
-   └── content
-       └── sounds
-           └── ouch.ogg
+<pre><code>~/.config/vinegar
+├── config.toml
+└── overlays
+    └── player
+        └── content
+            └── sounds
+                └── ouch.ogg
 </code></pre>
 <h2 id="fflags"><a class="header" href="#fflags">FFlags</a></h2>
 <p>See <a href="https://github.com/pizzaboxer/bloxstrap/wiki/A-guide-to-FastFlags">Bloxstrap's guide to FastFlags</a>.</p>
